--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,44 @@ because we want to be to able to execute mvn sonar:sonar without passing a profi
                     </execution>
                 </executions>
             </plugin>
+            <!-- change.. -->
+            <build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+			 	<groupId>org.jacoco</groupId>
+			 	<artifactId>jacoco-maven-plugin</artifactId>
+			 	<version>0.8.0</version>
+			 	<configuration>
+			 	<destFile>
+			 	${basedir}/target/coverage-reports/jacoco-unit.exec
+			 	</destFile>
+			 	<destFile>
+			 	${basedir}/target/coverage-reports/jacoco-unit.exec
+			 	</destFile>
+			 	</configuration>
+			 	<executions>
+			 	<execution>
+			 	<id>jacoco-initialize</id>
+			 	<goals>
+			 	<goal>prepare-agent</goal>
+			 	</goals>
+			 	</execution>
+			 	<execution>
+			 	<id>jacoco-site</id>
+			 	<phase>package</phase>
+			 	<goals>
+			 	<goal>report</goal>
+			 	</goals>
+			 	</execution>		 	
+			 	</executions>
+			</plugin>
+		</plugins>
+	</build>
+
             <!-- CODE COVERAGE -->
             <plugin>
                 <groupId>org.jacoco</groupId>
